--- a/src/style/CommonStyle/GeneralForm.css
+++ b/src/style/CommonStyle/GeneralForm.css
@@ -90,12 +90,33 @@
     cursor: not-allowed;
   }
   
-  /* Error Message */
-  .form-section p.error-message {
+  .warning-text{
+    background-color: white;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    font-weight: 600;
+  }
+  
+  .warning-pop-up-message-animation{
+    animation: popUp 0.5s ease-in-out forwards;
     color: red;
-    font-size: 0.875rem;
-    margin-top: 1rem;
-    font-weight: bold;
+    z-index: 0; 
   }
 
+  .successful-pop-up-message-animation{
+    animation: popUp 0.5s ease-in-out forwards;
+    color: rgb(41, 153, 114);
+    z-index: 0; 
+  }
+
+  @keyframes popUp {
+    from {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    to {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
 
