--- a/src/style/CommonStyle/NavBar.css
+++ b/src/style/CommonStyle/NavBar.css
@@ -15,12 +15,16 @@
     padding-right: 1.5rem;
     border-radius:3rem ;
   }
-  
+  .logo-link
+  {
+    text-decoration: none;       
+  }
+
   .logo {
     color: black;              
     padding-left:0.5rem;         
     font-size: 24px;            
-    font-weight: bold;        
+    font-weight: bold;   
   }
 
   .calendar-icon {
