--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,17 @@ body {
   background-color: #ffffff;
   background-image: linear-gradient(315deg, #ffffff 0%, #5899e2 74%);
   min-height: 100vh;
-  color: #151515;
+  color:#092f5c;
+}
+
+.loading-text{
+  padding-left:1.5rem;
+  padding-right:1.5rem;
+  padding-top:1rem;
+  padding-bottom:1rem;
+  border-radius: 0.5rem;
+  font-size: large;
+  font-weight: bold;
 }
 
 code {
