--- a/src/style/AddTravelData.css
+++ b/src/style/AddTravelData.css
@@ -19,3 +19,26 @@
     text-align: center;
     font-size: 20px;
   }
+
+  .addTravel-warning-pop-up-message-animation{
+    animation: popUp 0.5s ease-in-out forwards;
+    color: red;
+    z-index: 0; 
+  }
+
+  .addTravel-successful-pop-up-message-animation{
+    animation: popUp 0.5s ease-in-out forwards;
+    color: rgb(41, 153, 114);
+    z-index: 0; 
+  }
+
+  @keyframes popUp {
+    from {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    to {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
