--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -87,7 +87,24 @@
     background-color: #fef6e4;
     padding: 1rem;
     border-radius: 0.5rem;
-    color: #4B9CD3;
+    color: #0c0c0d;
+  }
+
+  .calculate-btn{
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    padding: 1.8rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition:background-color 0.3s;
+    cursor:pointer;
+  }
+
+  .calculate-btn:hover {
+      background-color: #2980b9;
+    cursor: pointer;
   }
 
   @media (max-width: 768px) {
